Change the syntax of Homework1.java and Task1.java to correct errors. Add input.txt